--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -16,7 +16,7 @@ jobs:
       image: barichello/godot-ci:latest
     steps:
       - name: Checkout
-        uses: actions/checkout@4v
+        uses: actions/checkout@v4
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/templates
