--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/win/endlessVoyage.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -70,7 +70,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/linux/endlessVoyage"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -110,7 +110,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/web"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
