--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -18,7 +18,6 @@ jobs:
 
       - name: export game
         id: export
-        # Use latest version (see releases for all versions)
         uses: firebelley/godot-export@v5.2.0
         with:
           godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/4.1.2/Godot_v4.1.2-stable_linux.x86_64.zip 
@@ -34,3 +33,7 @@ jobs:
           tag: ${{ github.ref_name }}
           artifacts: ${{ steps.export.outputs.archive_directory }}/*        
 
+      - name: Deploy to GitHub Pages        
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          folder: build/web                  
