--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           generateReleaseNotes: true
-          tag: ${{ github.ref_name }}
+          tag: ${{ github.sha }}
           artifacts: ${{ steps.export.outputs.archive_directory }}/*        
 
       - name: Deploy to GitHub Pages        
