--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -25,6 +25,12 @@ jobs:
           relative_project_path: ./
           archive_output: true
 
+      - name: Copy Windows zip to web deploy dir
+        run: cp /home/runner/.local/share/godot/archives/win.zip /home/runner/.local/share/godot/builds/web
+
+      - name: Copy Linux zip to web deploy dir
+        run: cp /home/runner/.local/share/godot/archives/linux.zip /home/runner/.local/share/godot/builds/web
+
       - name: Deploy to GitHub Pages        
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
