--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -24,6 +24,9 @@ jobs:
           godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/4.1.2/Godot_v4.1.2-stable_export_templates.tpz
           relative_project_path: ./
           archive_output: true
+          
+       - name: Rename web.html        
+         run: mv /home/runner/.local/share/godot/builds/web/web.html /home/runner/.local/share/godot/builds/web/index.html
 
             #      - name: Copy Windows zip to web deploy dir
             #        run: cp /home/runner/.local/share/godot/archives/win.zip /home/runner/.local/share/godot/builds/web
