--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -140,7 +140,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.3]
 
-name="Android"
+name="android"
 platform="Android"
 runnable=true
 dedicated_server=false
