--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -25,6 +25,10 @@ jobs:
           relative_project_path: ./
           archive_output: true
 
+
+      - name: Copy dirty Github-Hack File to webs dir
+        run: /home/runner/.local/share/enable-threads.js /home/runner/.local/share/godot/builds/web
+
             #      - name: Copy Windows zip to web deploy dir
             #        run: cp /home/runner/.local/share/godot/archives/win.zip /home/runner/.local/share/godot/builds/web
 
