Activate github pages hack

--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -26,8 +26,11 @@ jobs:
           archive_output: true
 
 
-      - name: Copy dirty Github-Hack File to webs dir
+      - name: Copy dirty Githubpages-Hack File to webs dir
         run: /home/runner/.local/share/enable-threads.js /home/runner/.local/share/godot/builds/web
+
+      - name: Activate dirty Githubpages-File
+        run: sed -i -e 's/<head>/<head><script src="enable-threads.js"><\/script>/g' index.html
 
             #      - name: Copy Windows zip to web deploy dir
             #        run: cp /home/runner/.local/share/godot/archives/win.zip /home/runner/.local/share/godot/builds/web
