--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -52,7 +52,7 @@ jobs:
         uses: KikimoraGames/itch-publish@v0.0.3
         with:
           butlerApiKey: ${{secrets.BUTLER_API_KEY}}
-          gameData: /home/runner/.local/share/godot/builds/web/
+          gameData: /home/runner/.local/share/godot/archives/web.zip
           itchUsername: endlessvoyage
           itchGameId: endlessvoyage
           buildChannel: web
