--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Deploy to itch.io
         uses: manleydev/butler-publish-itchio-action@master 
-        with:
+        env:
           BUTLER_CREDENTIALS: ${{secrets.BUTLER_API_KEY}}
           PACKAGE: /home/runner/.local/share/godot/builds/web
           ITCH_USER: endlessvoyage
