--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -168,7 +168,7 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name="1.0"
-package/unique_name="org.godotengine.$genname"
+package/unique_name="org.godotengine.endlessvoyage"
 package/name=""
 package/signed=true
 package/app_category=2
