--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -42,11 +42,12 @@ jobs:
           folder: /home/runner/.local/share/godot/builds/web                 
 
       - name: Get Unix Timestamp
-        run: echo "TIMESTAMP=$(date +%s)" >> $GITHUB_ENV
+        id: timestamp
+        run: echo "TIMESTAMP=$(date +%s)" >> $GITHUB_OUTPUT
 
       - name: Create Release
         uses: ncipollo/release-action@v1.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: "{{ env.TIMESTAMP }}"
+          tag: "${{ steps.timestamp.outputs.TIMESTAMP }}"
           artifacts: ${{ steps.export.outputs.archive_directory }}/*
