Change Export names

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="win"
+name="endlessvoyage_windows"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
@@ -62,7 +62,7 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 
 [preset.1]
 
-name="linux"
+name="endlessvoyage_linux"
 platform="Linux/X11"
 runnable=true
 dedicated_server=false
@@ -102,7 +102,7 @@ rm -rf \"{temp_dir}\""
 
 [preset.2]
 
-name="web"
+name="endlessvoyage_web"
 platform="Web"
 runnable=true
 dedicated_server=false
@@ -140,7 +140,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.3]
 
-name="android"
+name="endlessvoyage_android"
 platform="Android"
 runnable=true
 dedicated_server=false
