--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -33,13 +33,16 @@ jobs:
         run: sed -i -e 's/<head>/<head><script src="enable-threads.js"><\/script>/g' /home/runner/.local/share/godot/builds/web/index.html
 
       - name: Copy Windows zip to web deploy dir
-        run: cp /home/runner/.local/share/godot/archives/win.zip /home/runner/.local/share/godot/builds/web
+        run: cp /home/runner/.local/share/godot/archives/endlessvoyage_windows.zip /home/runner/.local/share/godot/builds/web
+
+      - name: Copy Web zip to web deploy dir
+        run: cp /home/runner/.local/share/godot/archives/endlessvoyage_web.zip /home/runner/.local/share/godot/builds/web        
 
       - name: Copy Linux zip to web deploy dir
-        run: cp /home/runner/.local/share/godot/archives/linux.zip /home/runner/.local/share/godot/builds/web
+        run: cp /home/runner/.local/share/godot/archives/endlessvoyage_linux.zip /home/runner/.local/share/godot/builds/web
 
       - name: Copy Android zip to web deploy dir
-        run: cp /home/runner/.local/share/godot/archives/android.zip /home/runner/.local/share/godot/builds/web
+        run: cp /home/runner/.local/share/godot/archives/endlessvoyage_android.zip /home/runner/.local/share/godot/builds/web
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
