--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -56,3 +56,10 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
 
+      - uses: KikimoraGames/itch-publish@v0.0.3
+        with:
+          butlerApiKey: ${{secrets.BUTLER_API_KEY}}
+          gameData: /home/runner/.local/share/godot/builds/endlessvoyage_web
+          itchUsername: EndlessVoyage
+          itchGameId: EndlessVoyage
+          buildChannel: web
