--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -48,13 +48,13 @@ jobs:
         run: cp /home/runner/.local/share/godot/archives/endlessvoyage_android.zip /home/runner/.local/share/godot/builds/endlessvoyage_web/bin
 
       - name: Publish to itch.io
-        uses: KikimoraGames/itch-publish@v0.0.3
-        with:
-          butlerApiKey: ${{secrets.BUTLER_API_KEY}}
-          gameData: /home/runner/.local/share/godot/builds/endlessvoyage_web
-          itchUsername: EndlessVoyage
-          itchGameId: EndlessVoyage
-          buildChannel: web
+        uses: manleydev/butler-publish-itchio-action@master
+        env:
+          BUTLER_CREDENTIALS: ${{secrets.BUTLER_API_KEY}}
+          CHANNEL: web
+          ITCH_GAME: EndlessVoyage
+          ITCH_USER: EndlessVoyage
+          PACKAGE: /home/runner/.local/share/godot/builds/endlessvoyage_web
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
