--- a/.github/workflows/godotCi.yml
+++ b/.github/workflows/godotCi.yml
@@ -53,11 +53,14 @@ jobs:
       - name: List dir
         run: ls -la .
 
+      - name: List other dir
+        run: ls -la ../../../.local/share/godot/builds/endlessvoyage_web       
+
       - name: Publish to itch.io
         uses: KikimoraGames/itch-publish@v0.0.3
         with:
           butlerApiKey: ${{secrets.BUTLER_API_KEY}}
-          gameData: ./godot/builds/endlessvoyage_web
+          gameData: ../../../.local/share/godot/builds/endlessvoyage_web
           itchUsername: EndlessVoyage
           itchGameId: EndlessVoyage
           buildChannel: web
